--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -7,9 +7,9 @@
     </div>
             <div class="row">
       <p>
-        <a class="btn btn-primary btn-lg" href="/Akeray" target="_blank">ኣኬራይ</a>
-        <a class="btn btn-primary btn-lg" href="Tekeray" target="_blank">ቴኬራይ</a>
-        <a class="btn btn-primary btn-lg" href="services" target="_blank">ሊዩ ልዩ ኣጌልግሎቶች</a>
+        <a class="btn btn-primary btn-lg" href="/akerays" target="_blank">ኣኬራይ</a>
+        <a class="btn btn-primary btn-lg" href="/tekerays" target="_blank">ቴኬራይ</a>
+        <a class="btn btn-primary btn-lg" href="/services" target="_blank">ሊዩ ልዩ ኣጌልግሎቶች</a>
       </p>
     </div>
     <h1>Afelalagi</h1>
@@ -23,7 +23,4 @@
 
   </div>
 
-
-  <br>Enjoy &amp; Keep Us Updated,
-  <br>The MEAN.JS Team.
 </section>
